--- a/app/views/home.html
+++ b/app/views/home.html
@@ -89,6 +89,7 @@
 					<a href="/about">Learn More</a>
 				</div>
 			</div>
+			<div style="padding: 1em;position:relative; background-color: white;text-align:center;overflow:hidden; margin-top: 1em; border-radius: 10px;"><h2 style="position: absolute; top: 0; left: 0; right: 0; background-color: black; margin: 0; color: white; background-color: rgba(0,0,0,0.9); padding: 0.5em;">International Nestle Free Week</h2><p style="position: absolute; font-weight: bold; bottom: 0; left: 0; right: 0; background-color: black; color: white; margin: 0; background-color: rgba(0,0,0,0.95); padding: 0.5em;">From our friends at Baby Milk Action: <a href="https://www.facebook.com/events/1489691241358851/" style="color: white; text-decoration: underline;">International Nestle Free Week</a>. Check them out <a href="http://www.babymilkaction.org/" style="color: white; text-decoration: underline;">here</a> and their Facebook <a href="https://www.facebook.com/nestleboycottINBC" style="color: white; text-decoration: underline;">here</a></p><a href="https://www.facebook.com/events/1489691241358851/"><img src="http://static.propcott.com/images/nestle-free-week-feature.png"></a></div>
 		</div>
 		<div class="col-5" style="vertical-align: top; padding-left: 1em;">
 			<div id="rightbar">
