Basic contact us

--- a/app/views/static/contact.html
+++ b/app/views/static/contact.html
@@ -12,7 +12,7 @@
 	<div style="border-radius: 10px; padding: 1em; margin-bottom: 1em; background: white; margin-top: 1em;">
 		<h1 style="margin-top: 0;">Contact <small>Propcott</small></h1>
 		
-		<form action="/mailer" method="POST">
+		<form action="/contact" method="POST">
 			<p style="margin: 0; margin-bottom: 1em; line-height: 1.2;"><label>
 				<strong>Name</strong><br>
 				<input name="name" size="48">
