Propcott view template update

--- a/less-old/style.less
+++ b/less-old/style.less
@@ -1,34 +1,12 @@
 @import 'lib/normalize';
 @import 'lib/typicons';
 
-@import 'var/grid';
-@import 'var/type';
-@import 'var/colors';
+@import 'define/colors';
+@import 'define/type';
+@import 'define/grid';
 
-@import 'grid';
-@import 'type';
-@import 'navigation';
-@import 'footer';
-
-body {
-	color: @color-body;
-	background-color: #eee;
-	overflow-x: hidden;
-}
-
-
-.clear {
-	overflow: auto;
-	zoom: 1;
-}
-
-
-
-
-
-
-/*
-
+@import 'make/type';
+@import 'make/grid';
 
 @import 'temp';
 
