--- a/less-old/temp.less
+++ b/less-old/temp.less
@@ -339,6 +339,9 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: #ffffff;
 	margin: 0 1em 1em 0;
 }
+</style>
+	<meta property="fb:app_id" content="1475586926065669" />
+<style type="text/css">
 .fb-comments.fb_iframe_widget {
 	background-color: white;
 	box-shadow: 0 0 3px 1px rgba(0,0,0,0.2);
