--- a/app/views/base2.html
+++ b/app/views/base2.html
@@ -120,8 +120,10 @@
 	</div>
 </div>
 {% endblock %}
+<div id="content">
 {% block content %}{% endblock %}
-<div id="footer">
+</div>
+<div id="footer" class="container">
 	<div class="row">
 		<div class="col-12 col-sm-6">
 			<h3>Help &amp; Legal</h3>
