--- a/public/style/style2.css
+++ b/public/style/style2.css
@@ -2529,13 +2529,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-#navigation {
-  padding: 10px;
-  border-bottom: 1px solid #eee;
-  border-bottom: 1px solid rgba(0, 0, 0, 0);
-  box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.5);
-  background: white;
-}
 #logo {
   position: relative;
   width: 148px;
@@ -2543,9 +2536,20 @@ a:hover {
   text-indent: 148px;
   background-image: url(http://www.propcott.com/images/logo-header.png);
   background-repeat: no-repeat;
-  margin-right: 25px;
-  float: left;
   overflow: hidden;
+  height: 42px;
+  box-shadow: 0 0 3px -1px #000;
+  position: absolute;
+  left: 50%;
+  margin-left: -74px;
+  border-radius: 0px 0px 50% 3.33333333%;
+}
+#navigation {
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+  box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.5);
+  background: white;
 }
 .navigation-avatar {
   position: relative;
@@ -2605,12 +2609,49 @@ a:hover {
 }
 body {
   color: #373737;
-  background-color: #eee;
+  background-color: #111;
   overflow-x: hidden;
+}
+#content {
+  background-color: #eee;
 }
 .clear {
   overflow: auto;
   zoom: 1;
+}
+.content {
+  margin: 1em;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0 16px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+}
+.content .fill {
+  margin: 0 -16px;
+}
+.content .fill.noborder {
+  margin: 0 -17px;
+}
+.content .fill img {
+  vertical-align: top;
+  border-radius: 4px 4px 0 0;
+  width: 100%;
+}
+.fluid-video {
+  position: relative;
+  padding-bottom: 66.667%;
+}
+.fluid-video .inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.fluid-video .inner iframe {
+  width: 100%;
+  height: 100%;
 }
 /*
 
